<resources>
    <string name="app_name">iCPF</string>
    <string name="bt_cpf">Verifique o CPF digitado</string>
    <string name="txt_cpf">Digite um CPF </string>
    <string name="consultarCPF">Validador de CPF</string>
    <string name="SobreCPF">Sobre</string>
    <string name="CuriosidadeCPF">Curiosidades</string>
    <string name="cpfListados">Cpf Listados</string>
    <string name="txtSobre">Sobre iCPF</string>
    <string name="txtiContSobre"> Lorem Ipsum é simplesmente uma simulação de texto
        da indústria tipográfica e de impressos, e vem sendo utilizado desde o século
        XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou
        para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos,
        como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.
        Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de
        Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração
        eletrônica como Aldus PageMaker.</string>

</resources>
