<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.validador_cpf.MainActivity">

    <TextView
        android:id="@+id/txt_cpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btValidaCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/consultarCPF"
        android:layout_below="@+id/txt_cpf"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btSobre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/SobreCPF"
        android:layout_below="@+id/BtCuriosidade"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/BtCuriosidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CuriosidadeCPF"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/btListaConsultados"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btListaConsultados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cpfListados"
        android:layout_below="@+id/btValidaCpf"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</android.widget.RelativeLayout>
